--- a/.github/workflows/CITenderTest.yml
+++ b/.github/workflows/CITenderTest.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install blender 2.79
       run: |
+        sudo apt-get update
         sudo apt-get install -y blender
     - name: Attempt render
       run: |
